# Espanso-Edit

./: README.md  pyproject.toml
espanso_edit/: file.py
